<resources>
    <string name="app_name">ChatApp</string>
    <string name="scholar_chat">Scholar Chat</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">don`t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="error_weak_password">The given password is invalid.</string>
    <string name="ERROR_WEAK_PASSWORD">The password is invalid it must 6 characters at least</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">The email address is already in use by another account.</string>
    <string name="ERROR_INVALID_EMAIL">The email address is badly formatted.</string>
    <string name="success">Success</string>
    <string name="ERROR_INVALID_CREDENTIAL">User not found. Please try again.</string>
    <string name="ERROR_NETWORK">No network connection. Please check your internet.</string>
</resources>