<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kPrimaryColor"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1AFFFFFF"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="75dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/img" />

        <TextView
            style="@style/TextView"
            android:fontFamily="@font/pacifico_regular"
            android:text="@string/scholar_chat"
            android:textAlignment="center"
            android:textSize="32sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="75dp" />

        <TextView
            style="@style/TextView"
            android:text="@string/login"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/login_edt_email"
            style="@style/EditText"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/login_edt_password"
            style="@style/EditText"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="8dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/kPrimaryColor" />

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:text="@string/don_t_have_an_account" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView"
                android:text="@string/sign_up"
                android:textColor="@color/LightGrayishCyan" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>